--- a/counter.html
+++ b/counter.html
@@ -7,14 +7,20 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <title>Hey Chritophe, je peux te déranger</title>
+        <title>Hey Christophe, je peux te déranger</title>
     </head>
-    <body>
+    <body class="text-center">
         <main>
-            <button type="button" class="seb btn btn-warning" id="seb">Sebastien</button>
-            <div id="counter">Total des "hey Christophe"</div>
+            <div class="">
+                <button type="button" class="seb btn btn-warning" id="seb">Sebastien</button>
+            </div>
+            <div class="">
+                <div id="counter" class=" btn btn-success">
+                    Total des "hey Christophe"
+                </div>
+
+            </div>
         </main>
-    </body>
         <footer>
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
                     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -27,5 +33,6 @@
                     crossorigin="anonymous"></script>
             <script src="counter.js"></script>
         </footer>
+    </body>
 </html>
 
