--- a/counter.html
+++ b/counter.html
@@ -12,27 +12,33 @@
     <body class="text-center">
         <main>
             <div class="">
-                <button type="button" class="seb btn btn-warning" id="seb">Sebastien</button>
+                <button type="button" class="btn btn-primary" id="addPadawan">Ajouter un padawan </button>
+                <br>
+                <button type="button" class="btn btn-danger" id="removePadawan">Enlever un padawan </button>
+                <br>
             </div>
-            <div class="">
-                <div id="counter" class=" btn btn-success">
-                    Total des "hey Christophe"
-                </div>
-
+            <br>
+            <div class="padawan">
+                <button type="button" class="collegue btn btn-warning" id="collegue">Valeur à remplacer</button>
+                <br>
+             </div>
+            <br>
+            <div id="counter" class="btn btn-success">
+                Total des "hey Christophe"
             </div>
         </main>
         <footer>
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                    crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-                    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-                    crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-                    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-                    crossorigin="anonymous"></script>
-            <script src="counter.js"></script>
         </footer>
+                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                        crossorigin="anonymous"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                        crossorigin="anonymous"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                        crossorigin="anonymous"></script>
+                <script src="counter.js"></script>
     </body>
 </html>
 
