--- a/counter.html
+++ b/counter.html
@@ -24,7 +24,7 @@
              </div>
             <br>
             <div id="counter" class="btn btn-success">
-                Total des "hey Christophe"
+                Total des "Hey Christophe"
             </div>
         </main>
         <footer>
